# germaneering-lab

./: .gitignore  README.md  pyproject.toml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
haversine/: __init__.py  __main__.py  calculator.py  cli.py  models.py  validator.py
specs/001-haversine-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-haversine-cli/checklists/: requirements.md
specs/001-haversine-cli/contracts/: cli-interface.md
tests/: __init__.py  test_calculator.py  test_cli.py  test_models.py  test_validator.py
